# project-by-coolteam

./: README.md  parser.ipynb  parser.py  requirements.txt  yandexart.py
ConvDocToComics/: add_text.py  generate_panels.py  kartoon.py  output.txt  yandexart.py
PyCharmMiscProject/: add_text.py  generate_panels.py  kartoon.py  output.txt  parser.py  stability_ai.py
PyCharmMiscProject/output/: panels.json
parser/: CMakeLists.txt  howtouse.txt  main.cpp  output.txt  pdf_parser  pdf_parser.cpp  pdf_parser.h
